--- a/css/style.css
+++ b/css/style.css
@@ -203,9 +203,11 @@
 /*** Navbar End ***/
 
 /*** Carousel Header Start ***/
+
 .carousel .carousel-item img {
     object-fit: cover;
 }
+
 
 .carousel .carousel-item,
 .carousel .carousel-item img {
@@ -223,15 +225,15 @@
     align-items: center;
 }
 
-.carousel .carousel-indicators {
+/* .carousel .carousel-indicators {
     left: 75%;
     top: 50%;
     margin-right: 25%;
     transform: translateY(-50%);
     flex-direction: column;
-}
+} */
 
-.carousel-indicators [data-bs-target] {
+/* .carousel-indicators [data-bs-target] {
     display: flex;
     width: 15px;
     height: 15px;
@@ -253,7 +255,7 @@
     .carousel-indicators [data-bs-target] {
         display: none;
     }
-}
+} */
 /*** Carousel Header End ***/
 
 /*** Single Page Hero Header Start ***/
@@ -385,6 +387,13 @@
     background: var(--bs-secondary);
 }
 /*** About End ***/
+
+
+
+
+
+
+
 
 
 /*** Fact Counter Start ***/
@@ -783,6 +792,35 @@
     height: 100%;
 }
 /*** Team End ***/
+
+
+/*** img movil Start***/
+.img-movil {
+    display: none;
+}
+
+/*** Pantalla de 768px ***/
+@media screen and (max-width: 768px) {
+    .img-movil {
+        display: block;
+        object-fit: cover;
+    }
+    .img-desktop {
+        display: none;
+    }
+    
+}
+
+/*** Para pantalla Grande ***/
+@media screen and (min-width: 768px) {
+    .img-desktop {
+        display: block;
+        object-fit: cover;
+    }
+    
+}
+
+
 
 /*** Testimonial Start ***/
 .testimonial-carousel .owl-stage-outer {
